--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -5,3 +5,4 @@ $color-4: red;
 $lg-max: 1366px;
 $md-max: 850px;
 $sm-max: 480px;
+$xs-max: 400px;
